--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,1 +1,58 @@
-<app-navbar></app-navbar>
+
+<!DOCTYPE html>
+<div class="container">
+  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+      <span class="fs-4"></span>
+    </a>
+
+    <ul class="nav nav-pills">
+      <li class="nav-item"><a routerLink="/dashboard"class="nav-link active" aria-current="page">Home</a></li>
+    </ul>
+    <div>
+    <form  id="myform" class="search" > 
+      <input id="books" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
+      <button class="btn btn-outline-success" onclick="getbusqueda()" >Search</button>
+      <script src="./fuction.js"></script>
+    </form> 
+      </div>
+    <div class=" col-md-3 text-end">
+      <button type="button" class="btn btn-warning" onclick="cerrarsesion()">Cerrar sesion</button>
+    </div>
+
+  </header>
+  
+</div>
+  <div class="wrapper"  id="featured-3"> 
+    <h2  class="pb-2 border-bottom">Bibloteca</h2>
+
+   <br>
+  <section class="container__card">
+      <div class="row-cols-md-3 g-4" *ngFor="let libro of libro" >
+        <div class="card__father">
+          <div class="">
+          <div class="">
+            <img  class="" width=""  src="{{libro.volumeInfo.imageLinks.thumbnail}}" class="img-fluid rounded-start" alt="4">
+          </div>
+          <div class="bg"></div>
+            <h5 class="">{{libro.volumeInfo.title}}</h5> -->
+               <p class="">{{libro.volumeInfo.subtitle}}</p> -->
+             <p class=""> Authors:{{libro.volumeInfo.authors}}</p> -->
+              <div class="">
+                <div class="bg"></div>
+               <p class=""> Info:   {{libro.saleInfo.saleability }}</p> 
+                <p class=""> ContentVersion:   {{libro.volumeInfo. contentVersion}}</p> 
+               <h5 class="">Title:{{libro.volumeInfo.title}}</h5>
+             <p class=""> PublishedDate:   {{libro.volumeInfo.publishedDate}}</p>
+                <p class="">Language:      {{libro.volumeInfo.language}}</p>
+                <p class="">Categories:     {{libro.volumeInfo.categories}}</p>
+                <p class="">Authors:{{libro.volumeInfo.authors}}</p>
+
+              </div>
+            </div>
+          </div>  
+        </div>
+    </section>
+    
+  </div> 
